--- a/tailwind.css
+++ b/tailwind.css
@@ -10,20 +10,36 @@
   top: 0px
 }
 
-.bottom-40 {
-  bottom: 10rem
-}
-
 .bottom-0 {
   bottom: 0px
+}
+
+.bottom-40 {
+  bottom: 10rem
 }
 
 .bottom-10 {
   bottom: 2.5rem
 }
 
+.m-5 {
+  margin: 1.25rem
+}
+
 .-mt-6 {
   margin-top: -1.5rem
+}
+
+.mt-5 {
+  margin-top: 1.25rem
+}
+
+.mt-20 {
+  margin-top: 5rem
+}
+
+.mr-4 {
+  margin-right: 1rem
 }
 
 .flex {
@@ -54,6 +70,10 @@
   height: 4rem
 }
 
+.h-32 {
+  height: 8rem
+}
+
 .w-10 {
   width: 2.5rem
 }
@@ -66,16 +86,20 @@
   width: 100%
 }
 
-.w-52 {
-  width: 13rem
-}
-
 .w-16 {
   width: 4rem
 }
 
+.w-52 {
+  width: 13rem
+}
+
 .w-64 {
   width: 16rem
+}
+
+.w-32 {
+  width: 8rem
 }
 
 .flex-1 {
@@ -114,11 +138,6 @@
   border-radius: 1rem
 }
 
-.rounded-b-xl {
-  border-bottom-right-radius: 0.75rem;
-  border-bottom-left-radius: 0.75rem
-}
-
 .rounded-b-lg {
   border-bottom-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem
@@ -139,14 +158,19 @@
   background-color: rgb(187 247 208 / var(--tw-bg-opacity))
 }
 
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity))
+}
+
 .bg-red-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 113 113 / var(--tw-bg-opacity))
 }
 
-.bg-gray-400 {
+.bg-red-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity))
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity))
 }
 
 .p-4 {
@@ -176,12 +200,34 @@
   padding-bottom: 0.5rem
 }
 
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem
+}
+
 .pt-1 {
   padding-top: 0.25rem
 }
 
 .pb-2 {
   padding-bottom: 0.5rem
+}
+
+.pt-20 {
+  padding-top: 5rem
+}
+
+.pl-2 {
+  padding-left: 0.5rem
 }
 
 .text-center {
@@ -198,12 +244,12 @@
   line-height: 2rem
 }
 
-.font-semibold {
-  font-weight: 600
-}
-
 .font-bold {
   font-weight: 700
+}
+
+.font-semibold {
+  font-weight: 600
 }
 
 .text-gray-500 {
