--- a/tailwind.css
+++ b/tailwind.css
@@ -10,6 +10,10 @@
   top: 0px
 }
 
+.-left-14 {
+  left: -3.5rem
+}
+
 .bottom-0 {
   bottom: 0px
 }
@@ -26,6 +30,29 @@
   margin: 1.25rem
 }
 
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem
+}
+
+.my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem
+}
+
+.mr-4 {
+  margin-right: 1rem
+}
+
+.ml-14 {
+  margin-left: 3.5rem
+}
+
 .-mt-6 {
   margin-top: -1.5rem
 }
@@ -38,12 +65,20 @@
   margin-top: 5rem
 }
 
-.mr-4 {
-  margin-right: 1rem
-}
-
 .flex {
   display: flex
+}
+
+.h-full {
+  height: 100%
+}
+
+.h-16 {
+  height: 4rem
+}
+
+.h-12 {
+  height: 3rem
 }
 
 .h-10 {
@@ -58,20 +93,20 @@
   height: 75%
 }
 
-.h-full {
-  height: 100%
-}
-
 .h-20 {
   height: 5rem
 }
 
-.h-16 {
-  height: 4rem
-}
-
 .h-32 {
   height: 8rem
+}
+
+.w-16 {
+  width: 4rem
+}
+
+.w-12 {
+  width: 3rem
 }
 
 .w-10 {
@@ -86,20 +121,16 @@
   width: 100%
 }
 
-.w-16 {
-  width: 4rem
-}
-
 .w-52 {
   width: 13rem
 }
 
-.w-64 {
-  width: 16rem
-}
-
 .w-32 {
   width: 8rem
+}
+
+.w-64 {
+  width: 16rem
 }
 
 .flex-1 {
@@ -126,6 +157,10 @@
   justify-content: space-evenly
 }
 
+.rounded-lg {
+  border-radius: 0.5rem
+}
+
 .rounded-full {
   border-radius: 9999px
 }
@@ -143,6 +178,23 @@
   border-bottom-left-radius: 0.5rem
 }
 
+.rounded-tl-none {
+  border-top-left-radius: 0px
+}
+
+.rounded-tr-none {
+  border-top-right-radius: 0px
+}
+
+.border-t {
+  border-top-width: 1px
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity))
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity))
@@ -153,19 +205,19 @@
   background-color: rgb(254 202 202 / var(--tw-bg-opacity))
 }
 
-.bg-green-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(187 247 208 / var(--tw-bg-opacity))
-}
-
-.bg-gray-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity))
-}
-
 .bg-red-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 113 113 / var(--tw-bg-opacity))
+}
+
+.bg-purple-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 51 234 / var(--tw-bg-opacity))
+}
+
+.bg-green-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(187 247 208 / var(--tw-bg-opacity))
 }
 
 .bg-red-500 {
@@ -173,8 +225,13 @@
   background-color: rgb(239 68 68 / var(--tw-bg-opacity))
 }
 
-.p-4 {
-  padding: 1rem
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity))
+}
+
+.p-5 {
+  padding: 1.25rem
 }
 
 .p-2 {
@@ -183,6 +240,15 @@
 
 .p-3 {
   padding: 0.75rem
+}
+
+.p-4 {
+  padding: 1rem
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem
 }
 
 .px-5 {
@@ -210,8 +276,20 @@
   padding-bottom: 2rem
 }
 
+.pl-2 {
+  padding-left: 0.5rem
+}
+
 .pb-5 {
   padding-bottom: 1.25rem
+}
+
+.pt-20 {
+  padding-top: 5rem
+}
+
+.pl-4 {
+  padding-left: 1rem
 }
 
 .pt-1 {
@@ -222,20 +300,12 @@
   padding-bottom: 0.5rem
 }
 
-.pt-20 {
-  padding-top: 5rem
-}
-
-.pl-2 {
-  padding-left: 0.5rem
-}
-
 .text-center {
   text-align: center
 }
 
-.text-xl {
-  font-size: 1.25rem;
+.text-lg {
+  font-size: 1.125rem;
   line-height: 1.75rem
 }
 
@@ -244,12 +314,22 @@
   line-height: 2rem
 }
 
-.font-bold {
-  font-weight: 700
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem
 }
 
 .font-semibold {
   font-weight: 600
+}
+
+.font-bold {
+  font-weight: 700
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity))
 }
 
 .text-gray-500 {
@@ -260,9 +340,4 @@
 .text-red-400 {
   --tw-text-opacity: 1;
   color: rgb(248 113 113 / var(--tw-text-opacity))
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity))
 }
