--- a/tailwind.css
+++ b/tailwind.css
@@ -65,6 +65,14 @@
   margin-top: 5rem
 }
 
+.mb-1 {
+  margin-bottom: 0.25rem
+}
+
+.ml-1 {
+  margin-left: 0.25rem
+}
+
 .flex {
   display: flex
 }
@@ -101,6 +109,22 @@
   height: 8rem
 }
 
+.h-4 {
+  height: 1rem
+}
+
+.h-8 {
+  height: 2rem
+}
+
+.h-9 {
+  height: 2.25rem
+}
+
+.h-11 {
+  height: 2.75rem
+}
+
 .w-16 {
   width: 4rem
 }
@@ -131,6 +155,14 @@
 
 .w-64 {
   width: 16rem
+}
+
+.w-9 {
+  width: 2.25rem
+}
+
+.w-11 {
+  width: 2.75rem
 }
 
 .flex-1 {
@@ -171,6 +203,10 @@
 
 .rounded-2xl {
   border-radius: 1rem
+}
+
+.rounded-md {
+  border-radius: 0.375rem
 }
 
 .rounded-b-lg {
@@ -228,6 +264,36 @@
 .bg-gray-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity))
+}
+
+.bg-\[\#ff8836\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 136 54 / var(--tw-bg-opacity))
+}
+
+.bg-\[\#FFAC38\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 172 56 / var(--tw-bg-opacity))
+}
+
+.bg-\[\#ffb683\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 182 131 / var(--tw-bg-opacity))
+}
+
+.bg-\[\#c45200\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(196 82 0 / var(--tw-bg-opacity))
+}
+
+.bg-\[\#FFD455\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 212 85 / var(--tw-bg-opacity))
+}
+
+.bg-\[\#FFA943\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 169 67 / var(--tw-bg-opacity))
 }
 
 .p-5 {
@@ -300,6 +366,10 @@
   padding-bottom: 0.5rem
 }
 
+.pt-10 {
+  padding-top: 2.5rem
+}
+
 .text-center {
   text-align: center
 }
@@ -340,4 +410,23 @@
 .text-red-400 {
   --tw-text-opacity: 1;
   color: rgb(248 113 113 / var(--tw-text-opacity))
+}
+
+.text-\[\#ff914d\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 145 77 / var(--tw-text-opacity))
+}
+
+.text-\[\] {
+  color: 
+}
+
+.text-\[\#ff8836\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 136 54 / var(--tw-text-opacity))
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity))
 }
